--- a/thesis/chapter4.tex
+++ b/thesis/chapter4.tex
@@ -119,12 +119,12 @@ In Figure~\ref{fig:lengths-query-words-named-entity-words} the distributions of 
     \label{fig:cleaned-zipf-named-entities-word}
 \end{figure} 
 
-\begin{figure}
-    \centering
-    \import{../plots/updated_plots/query-frequencies-and-extract-chars-single}{all.pgf}
-    \caption{Zipf's law with cleaned aql}
-    \label{fig:cleaned-zipf-queries-chars}
-\end{figure} 
+% \begin{figure}
+%     \centering
+%     \import{../plots/updated_plots/query-frequencies-and-extract-chars-single}{all.pgf}
+%     \caption{Zipf's law with cleaned aql}
+%     \label{fig:cleaned-zipf-queries-chars}
+% \end{figure} 
 
 % \begin{figure}
 %     \centering
